Fix right-aligned headers to use left alignment
The right-aligned header CSS rule (.ag-right-aligned-header) had higher
specificity than the general header rule and was still setting
justify-content: flex-end. Changed to flex-start so all column headers
are consistently left-aligned.

--- a/css/spreadsheet.css
+++ b/css/spreadsheet.css
@@ -83,7 +83,7 @@
 
 .ag-theme-quartz .ag-right-aligned-header .ag-header-cell-label {
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 /* --- 3. Header Bottom Border --- */
